--- a/dropbox-carousel/Base.lproj/LaunchScreen.storyboard
+++ b/dropbox-carousel/Base.lproj/LaunchScreen.storyboard
@@ -12,9 +12,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="intro" id="JBV-gy-Hrd">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="1136"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="startup" id="Q6L-eV-GTW">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <autoresizingMask key="autoresizingMask"/>
                             </imageView>
                         </subviews>
                         <animations/>
@@ -27,6 +27,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="intro" width="320" height="1136"/>
+        <image name="startup" width="320" height="568"/>
     </resources>
 </document>
